--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Green Park Multi-Cuisine Restaurant</title>
+    <title>Green Garden Multi-Cuisine Restaurant</title>
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/styles.css">
     <link href='https://fonts.googleapis.com/css?family=Oxygen:400,300,700' rel='stylesheet' type='text/css'>
@@ -20,7 +20,7 @@
           </a>
 
           <div class="navbar-brand">
-            <a href="index.html"><h1>Green Park Multi-Cuisine Restaurant</h1></a>
+            <a href="index.html"><h1>Green Garden Multi-Cuisine Restaurant</h1></a>
             <p>
               <img src="images/star-k-logo.png" alt="Food Safety and Standards Authority of India certification">
               <span> ISO Certified</span>
@@ -77,8 +77,8 @@
         </section>
         <section id="address" class="col-sm-4">
           <span>Address:</span><br>
-          Bangalore - Mangalore Hwy, Bellur Cross,<br>
-          Mandya, Karnataka - 571448.
+          79VM+QHJ, Gortara, <br>
+          Shahdol, Madhya Pradesh - 484120.
           <p>* Delivery area within 3-4 miles, with minimum order of Rs.400 plus Rs.200 charge for all deliveries.</p>
           <hr class="visible-xs">
         </section>
@@ -87,7 +87,7 @@
           <p>"Amazing food! Great service! Couldn't ask for more! I'll be back again and again!"</p>
         </section>
       </div>
-      <div class="text-center">&copy; Copyright Green Park Multi-Cuisine Restaurant 2015</div>
+      <div class="text-center">&copy; Copyright Green Garden Multi-Cuisine Restaurant 2015</div>
     </div>
   </footer>
 
