--- a/snippets/home-snippet.html
+++ b/snippets/home-snippet.html
@@ -12,9 +12,9 @@
         </a>
       </div>
       <div class="col-md-4 col-sm-12 col-xs-12">
-        <a href="https://www.google.com/maps/place/Green+Park+View+Restaurant/@12.9612929,76.7303953,18z/data=!3m1!4b1!4m5!3m4!1s0x3bafeed307ae7941:0xe9f5906e3c76b3a5!8m2!3d12.9612848!4d76.7312137" target="_blank">
+        <a href="https://www.google.com/maps/place/Hotel+Green+Garden/@23.2944712,81.3816972,17z/data=!3m1!4b1!4m8!3m7!1s0x3986faf8a9debd4b:0x24c05b4521bd409f!5m2!4m1!1i2!8m2!3d23.2944665!4d81.3839008" target="_blank">
           <div id="map-tile">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1944.082489132048!2d76.73039530307635!3d12.96129289871902!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bafeed307ae7941%3A0xe9f5906e3c76b3a5!2sGreen%20Park%20View%20Restaurant!5e0!3m2!1sen!2sin!4v1640177226318!5m2!1sen!2sin" width="100%" height="250" frameborder="0" style="border:0" allowfullscreen></iframe>
+            <iframe src="<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3664.5864671351283!2d81.38169721497279!3d23.294471184816103!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3986faf8a9debd4b%3A0x24c05b4521bd409f!2sHotel%20Green%20Garden!5e0!3m2!1sen!2sin!4v1649433093243!5m2!1sen!2sin" width="100%" height="250" frameborder="0" style="border:0" allowfullscreen></iframe>
             <!-- h<iframe src="<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d31104.727216126637!2d76.72668245468341!3d12.966034829122158!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bafe92cd498d227%3A0x1aaec7292d3e02ba!2sHotel%20Mayura!5e0!3m2!1sen!2sin!4v1640175857818!5m2!1sen!2sin" width="100%" height="250" frameborder="0" style="border:0" allowfullscreen></iframe> -->
             <span>map</span>
           </div>
