--- a/snippets/home-snippet.html
+++ b/snippets/home-snippet.html
@@ -16,7 +16,7 @@
           <div id="map-tile">
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7681.605244850619!2d81.36615211572999!3d23.297146424557727!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3986faf8a9debd4b%3A0x24c05b4521bd409f!2sHotel%20Green%20Garden!5e0!3m2!1sen!2sin!4v1649433540852!5m2!1sen!2sin" width="100%" height="250" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             <!-- <iframe src="<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3664.5864671351283!2d81.38169721497279!3d23.294471184816103!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3986faf8a9debd4b%3A0x24c05b4521bd409f!2sHotel%20Green%20Garden!5e0!3m2!1sen!2sin!4v1649433093243!5m2!1sen!2sin" width="100%" height="250" frameborder="0" style="border:0" allowfullscreen></iframe> -->
-      
+            <!--  Hello -->
             <span>map</span>
           </div>
         </a>
