--- a/snippets/home-snippet.html
+++ b/snippets/home-snippet.html
@@ -14,9 +14,8 @@
       <div class="col-md-4 col-sm-12 col-xs-12">
         <a href="https://www.google.com/maps/place/Hotel+Green+Garden/@23.2944712,81.3816972,17z/data=!3m1!4b1!4m8!3m7!1s0x3986faf8a9debd4b:0x24c05b4521bd409f!5m2!4m1!1i2!8m2!3d23.2944665!4d81.3839008" target="_blank">
           <div id="map-tile">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7681.605244850619!2d81.36615211572999!3d23.297146424557727!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3986faf8a9debd4b%3A0x24c05b4521bd409f!2sHotel%20Green%20Garden!5e0!3m2!1sen!2sin!4v1649433540852!5m2!1sen!2sin" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe> 
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7681.605244850619!2d81.36615211572999!3d23.297146424557727!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3986faf8a9debd4b%3A0x24c05b4521bd409f!2sHotel%20Green%20Garden!5e0!3m2!1sen!2sin!4v1649433540852!5m2!1sen!2sin" width="100%" height="250" frameborder="0" style="border:0" allowfullscreen></iframe> 
             <!-- <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1944.082489132048!2d76.73039530307635!3d12.96129289871902!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bafeed307ae7941%3A0xe9f5906e3c76b3a5!2sGreen%20Park%20View%20Restaurant!5e0!3m2!1sen!2sin!4v1640177226318!5m2!1sen!2sin" width="100%" height="250" frameborder="0" style="border:0" allowfullscreen></iframe>  -->
-            <!-- hi -->
             <span>map</span>
           </div>
         </a>
